--- a/ExpressNodeJS/app-servidor-prueba/config/config.json
+++ b/ExpressNodeJS/app-servidor-prueba/config/config.json
@@ -15,8 +15,8 @@
   },
   "production": {
     "username": "root",
-    "password": null,
-    "database": "database_production",
+    "password": "k3v1nC#3V3Z_@1224",
+    "database": "db_app_express_prueba",
     "host": "127.0.0.1",
     "dialect": "mysql"
   }
