--- a/Proyecto3/app-cliente-angular/angular.json
+++ b/Proyecto3/app-cliente-angular/angular.json
@@ -100,6 +100,16 @@
             ],
             "scripts": []
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {
+            "prerender": false,
+            "ssr": false,
+            "browserTarget": "Proyecto3:build:production",
+            "firebaseProject": "dbnr-kch-proy3-dawm",
+            "firebaseHostingSite": "dbnr-kch-proy3-dawm"
+          }
         }
       }
     }
